--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get install -y software-properties-common
 RUN add-apt-repository ppa:deadsnakes/ppa -y
 RUN apt-get install -y python3.8
 RUN ln -s /usr/bin/python3.8 /usr/bin/python
+RUN apt-get install -y libgl1-mesa-dev libglib2.0-0
 RUN apt-get install -y python3-pip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -22,6 +23,7 @@ RUN pip3 install torch==1.10.1+cu111 torchvision==0.11.2+cu111 -f https://downlo
 RUN pip3 install -U pip setuptools
 RUN pip3 install -U setuptools
 RUN pip3 install -U six
+RUN pip3 install -U opencv-python-headless
 
 # MMCV
 RUN pip3 install -U openmim
